# ChangeLog for sci-biology/clustalw
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/clustalw/ChangeLog,v 1.21 2009/09/22 11:37:55 maekke Exp $

  22 Sep 2009; Markus Meier <maekke@gentoo.org> clustalw-2.0.11.ebuild:
  x86 stable, bug #282109

  06 Sep 2009; Jeremy Olexa <darkside@gentoo.org> clustalw-2.0.11.ebuild:
  amd64 stable, bug 282109

  18 Aug 2009; Andrey Kislyuk <weaver@gentoo.org> clustalw-1.83-r2.ebuild:
  Fix Manifest

  18 Aug 2009; Andrey Kislyuk <weaver@gentoo.org> +clustalw-1.83-r2.ebuild:
  Avoid dropping stable keywords until stablereqs are done

*clustalw-1.83-r3 (18 Aug 2009)

  18 Aug 2009; Andrey Kislyuk <weaver@gentoo.org>
  +files/1.83-as-needed.patch, -clustalw-1.83-r2.ebuild,
  +clustalw-1.83-r3.ebuild:
  Fix bug 281734, thanks to Justin Lecher (jlec)

*clustalw-2.0.11 (28 Apr 2009)

  28 Apr 2009; Andrey Kislyuk <weaver@gentoo.org> -clustalw-2.0.9.ebuild,
  +clustalw-2.0.11.ebuild:
  Version bump, remove old, assume maintainership

  24 Mar 2009; Olivier Fisette <ribosome@gentoo.org> metadata.xml:
  Giving up maintainership of this package.

  09 Sep 2008; Markus Dittrich <markusle@gentoo.org> clustalw-2.0.9.ebuild:
  Keyworded amd64 since it works just fine.

*clustalw-2.0.9 (28 Aug 2008)

  28 Aug 2008; Olivier Fisette <ribosome@gentoo.org> +clustalw-2.0.9.ebuild:
  New upstream major version (complete rewrite, removing keywords). Slotted
  to cohexist with version 1.x.

*clustalw-1.83-r2 (27 Aug 2008)

  27 Aug 2008; Olivier Fisette <ribosome@gentoo.org>
  -clustalw-1.83-r1.ebuild, +clustalw-1.83-r2.ebuild:
  Forcing bump to start using slots as ClustalW 2 should coexist with 1.83.

  02 Nov 2006; Fabian Groffen <grobian@gentoo.org> clustalw-1.83-r1.ebuild:
  Dropped ppc-macos, see you in prefix.

  14 Sep 2006; Olivier Fisette <ribosome@gentoo.org> metadata.xml:
  Taking over maintainership.

  04 Jan 2006; Olivier Fisette <ribosome@gentoo.org>