@@ -1,8 +1,10 @@
 AUX 1.83-as-needed.patch 460 RMD160 227750cedadad2ef790792d7e9dc2cf8b7978ca6 SHA1 8b1bc014f1906e65fbd21d22556296e632d6161b SHA256 82748081256727b2b75cf744828a4917434dcf9a662d02c87afd646a75ce80bc
 DIST clustalw-2.0.11.tar.gz 325936 RMD160 ea65bcda9ca1006ab498cd967ae82cc1409332af SHA1 c0491e7da01f5ceb3d651e51d1b38a0c12fd8f02 SHA256 3150344721b32fbec3eb0f8a54aa8a3d25fa674ecc0ab5a68ba3d5f1b07b4cb1
+DIST clustalw-2.0.12.tar.gz 328025 RMD160 a9bb0deb812bfa7777c86e0835d292430c188fd9 SHA1 28290a97377be2a970de4bb2d208898848e819fa SHA256 f364fbc9401615b9be91f36562011ca711b840fae4cbfa129b4e13b0b8fc1540
 DIST clustalw1.83.UNIX.tar.gz 166863 RMD160 20c0ec7739be6747ae08220e5abf2bae412f039e SHA1 801ce911749171471b7964a1cff93c53c876c282 SHA256 8b757e02ae95ac0a0dd37db640497aa90f7a13a11784ce2a17f41b64e3059c60
 EBUILD clustalw-1.83-r2.ebuild 1048 RMD160 3268f20855c9afb5a221da3e92d08447662deaae SHA1 f776945aca62289fe1ad940fb654daf3402f56ed SHA256 9fa3d3d43c2b3927658f7ba92cd27c7f7cd223b8e4d78e7583d3eecdc129e201
 EBUILD clustalw-1.83-r3.ebuild 977 RMD160 385325939ad717a1a35b0c4872dd261e3090a028 SHA1 f124056975eeae83ade424dc8311765aad30b9ee SHA256 013ddce09b76776eb15afc5e27742e18abd3fafed00b10f21d49715059b62abc
 EBUILD clustalw-2.0.11.ebuild 566 RMD160 c3c022dd2a6eee92527f31440530358f2b3112b2 SHA1 acfb0e21cd6c7bece523f759b6599fdf241bb988 SHA256 d9e1af0d72c199d0f3e6aab9903a2b19935eadd04327f5ce17f29893bad96d21
-MISC ChangeLog 3976 RMD160 4c13b7a7f8ef3ee586ddbc837bc637711c55e781 SHA1 1c2e4ededd54eaff94253177ea5ad966151e2966 SHA256 3bc71f0f8e3ca7dcf5e75103a98ade9db8ef550802f97bed48b9ab57459ced5a
+EBUILD clustalw-2.0.12.ebuild 566 RMD160 daae0a6f34dea1567295ca989cc7a81a103b8e5c SHA1 9240c56d85b69d2e15208a95b5015f86e9096abf SHA256 2fd01cbf99e81e11f6762447c923a3960d54b399c171018030780db6ddc7916c
+MISC ChangeLog 4099 RMD160 f3a755a49339a43f65f0c80f13419eb026080e1f SHA1 c4784f7aac874ab9c56e6a3e92154473568b9690 SHA256 66276e7cd03b2f67340dcbdab93ea483cf8e05e8bafc4861e63194fc61136a43
 MISC metadata.xml 259 RMD160 d9d81b67d635fabd81aef8ae0edf971211ae9072 SHA1 8e32f751c67ff891fa35405a2cf6fb33752d6eb1 SHA256 541c3fbcf299d9a8ccf4132ee61f9e53a5d737cefdaa6fdc77764d8d4c7f3110
