@@ -1,6 +1,11 @@
 # ChangeLog for sci-biology/clustalw
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/clustalw/ChangeLog,v 1.21 2009/09/22 11:37:55 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/clustalw/ChangeLog,v 1.22 2009/10/18 21:14:11 weaver Exp $
+
+*clustalw-2.0.12 (18 Oct 2009)
+
+  18 Oct 2009; Andrey Kislyuk <weaver@gentoo.org> +clustalw-2.0.12.ebuild:
+  Version bump
 
   22 Sep 2009; Markus Meier <maekke@gentoo.org> clustalw-2.0.11.ebuild:
   x86 stable, bug #282109
